--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "@types/styled-components": "^4.4.2",
     "antd": "^3.26.7",
     "gatsby": "^2.18.12",
-    "gatsby-background-image": "^0.9.12",
+    "gatsby-background-image": "^0.9.13",
     "gatsby-image": "^2.2.34",
-    "gatsby-plugin-manifest": "^2.2.31",
+    "gatsby-plugin-favicon": "^3.1.6",
+    "gatsby-plugin-manifest": "^2.2.40",
     "gatsby-plugin-offline": "^3.0.27",
     "gatsby-plugin-react-helmet": "^3.1.16",
     "gatsby-plugin-sharp": "^2.3.5",
@@ -19,7 +20,9 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-google-recaptcha": "^2.0.1",
     "react-helmet": "^5.2.1",
+    "react-recaptcha-google": "^1.1.1",
     "styled-components": "^4.4.1",
     "typeface-lato": "0.0.75"
   },
