--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/styled-components": "^4.4.2",
     "antd": "^3.26.7",
     "babel-plugin-styled-components": "^1.10.7",
+    "dotenv": "^8.2.0",
     "gatsby": "^2.18.12",
     "gatsby-background-image": "^0.9.13",
     "gatsby-image": "^2.2.34",
